# machine-learning-zoomcamp-2025

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
01-intro/: homework.ipynb
02-linreg/: homework_02_reg.ipynb
03-classification/: homework_03_classification.ipynb  testing.ipynb
04-evaluation/: homework_04_eval.ipynb
05-deployment/: .dockerignore  Dockerfile  homework_05_deployment.ipynb  main.py  pyproject.toml  request_prediction.py
06-trees/: homework_06_trees.ipynb  testing.ipynb  testing_06.ipynb
